# ML_pipeline_tabular

./: .gitignore  .pylintrc  README.md  __main__.py  collect_results.py  combine_results.py  config.yaml  features.json  licence.md  main.py  overview.md  paths.yaml  pyproject.toml  readme.md  tmp_paths.yaml
cardio_parsers/: __main__.py  data_handler.py  data_reader.py  factory.py  pipeline.py  state_machine.py
cardio_parsers/crates/: __init__.py  data_split.py  feature_reductions.py  helpers.py  imputers.py  normalisers.py  verifications.py
cardio_parsers/data_borg/: __init__.py  data_borg.py
cardio_parsers/factory_parts/: data_reader.py  factory.py  job_handler.py  pipeline.py  report.py  state_machine.py
cardio_parsers/stations/: dim_reductions.py  feature_reductions.py  verifications.py
cardio_parsers/utils/: analyse_variables.py  analysis.py  cross_validation.py  exploration.py  global_helpers.py
config/: config.yaml
config/dataset/: example.yaml  test.yaml  train.yaml
dicom/: dicom_parser_main.py
excel/: global_helpers.py
excel/analysis/: analysis.py  verifications.py
excel/other_tasks/: cleanup.py  cleanup.yaml
excel/pre_processing/: pre_processing.py
feature_corr/: __init__.py  config.yaml
feature_corr/crates/: data_split.py  helpers.py
feature_corr/data_borg/: __init__.py  data_borg.py
feature_corr/data_handler/: __init__.py  data_handler.py
feature_corr/factory_parts/: data_reader.py  factory.py  job_handler.py  pipeline.py  report.py  (+1 more)
pipeline_tabular/: config_manager.py
tests/: conftest.py  main_test.py  pytest.ini
(+112 files in other folders)
